--- a/FRONTEND/src/shared/components/FormElements/Button.css
+++ b/FRONTEND/src/shared/components/FormElements/Button.css
@@ -1,9 +1,9 @@
 .button {
   font: inherit;
   padding: 0.5rem 1.5rem;
-  border: 1px solid #ff0055;
+  border: 1px solid #f44336;
   border-radius: 4px;
-  background: #ff0055;
+  background: #f44336;
   color: white;
   cursor: pointer;
   margin-right: 1rem;
@@ -23,13 +23,13 @@
 
 .button--inverse {
   background: transparent;
-  color: #ff0055;
+  color: #f44336;
 }
 
 .button--inverse:hover,
 .button--inverse:active {
   color: white;
-  background: #ff0055;
+  background: #f44336;
 }
 
 .button--danger {
